# bootcamp

./: .gitignore  README.md
ex-basics-3/sreyas-hello/: pyproject.toml
ex-basics-3/sreyas-hello/src/sreyas_hello/: __init__.py  cli.py
exercises/ex-basics-1/sreyas-hello/: README.md  pyproject.toml
exercises/ex-basics-1/sreyas-hello/src/sreyas_hello/: __init__.py
exercises/ex-basics-3/sreyas-hello/: pyproject.toml
projects/dataflow-framework/: main.py  maint.py  op.txt  pyproject.toml
projects/dataflow-framework/abstraction-level-0/: process.py
projects/dataflow-framework/abstraction-level-1/: .env  file.txt  main.py  pyproject.toml
projects/dataflow-framework/abstraction-level-2/: .env  README.md  cli.py  main.py  pipeline.py  pyproject.toml
projects/dataflow-framework/abstraction-level-3/: README.md  pipeline.py  pyproject.toml
projects/dataflow-framework/abstraction-level-4/: main.py  pipeline.py  pyproject.toml
projects/dataflow-framework/abstraction-level-5/: .env  cli.py  core.py  file.txt  main.py  pipeline.py  pipeline.yaml  pyproject.toml
projects/dataflow-framework/abstraction-level-6/: cli.py  core.py  pipeline.py  pipeline.yaml  pyproject.toml  typez.py  (+1 more)
projects/dataflow-framework/abstraction-level-7/: core.py  logs.txt  main.py  metrics.py  op.txt  pipeline.py  pyproject.toml
projects/dataflow-framework/abstraction-level-7/docs/: code.txt
projects/dataflow-framework/abstraction-level-7/processors/: base.py  output.py  tagger.py
projects/dataflow-framework/abstraction-level-7/templates/: dashboard.html
testing_grounds/: a-to-z-with-error-checking.sh  file.txt
testing_grounds/doc_compose/: docker-compose.yml
testing_grounds/dockerfile-1/: Dockerfile  pascal_test.py
testing_grounds/dockerfile-2/: Dockerfile
testing_grounds/get-http-file-in-txt/: docker-compose.yml  runThisFolder.sh
testing_grounds/publish-testing-z41/: commands.txt  pyproject.toml
testing_grounds/publish-testing-z41/src/publish_testing_z41/: __init__.py
testing_grounds/publish-testxx1/: pyproject.toml
testing_grounds/publish-testxx1/src/publish_testxx1/: __init__.py
testing_grounds/py-db-connect/: docker-compose.yml  runThisFolder.sh
testing_grounds/scripts/: 1-to-10-print-without-echo.sh  a-to-z-with-error-checking.sh  a-to-z-without-for.sh  file.txt  two-command-error-success-file.sh
(+38 files in other folders)
