[project]
name = "sreyas-hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sreyas", email = "sreyas.codaw@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sreyas-hello = "sreyas_hello:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
