[project]
name = "publish-testing-z41"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sreyas", email = "sreyas.codaw@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
publish-testing-z41 = "publish_testing_z41:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
